# Pandalytics

./: Evidencia_1.ipynb  RACES.csv  README.md  Regresión calificación alumnos_Equipo 1.ipynb  TI3001C_Etapa 2_1.ipynb  TI3001C_Etapa 3.2_1.ipynb  TI3002C_Etapa 4.1-Base Datos_1.ipynb  TI3002C_Etapa 5.1_1_Hiram Maximiliano Muñoz Ramirez.ipynb  Untitled.ipynb  Untitled1.ipynb  data_estudiantes.csv  datos.ipynb  process_data.py  pyproject.toml  spotify_equipo1.ipynb
