[tool.poetry]
name = "pandalytics"
version = "0.1.0"
description = ""
authors = ["Hiram Muñoz <hirammunozr@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.2"
jupyter-collaboration = "^2.0.11"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pyarrow = "^15.0.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
nbconvert = "^7.16.2"
pandoc = "^2.3"
seaborn = "^0.13.2"
notebook = "^7.1.2"
statsmodels = "^0.14.1"
scipy = "1.13.0"
tensorflow = "^2.16.1"
jupyverse = {extras = ["auth", "jupyterlab"], version = "^0.5.0"}
prophet = "^1.1.5"
pmdarima = "^2.0.4"
streamlit = "^1.35.0"
rulefit = {git = "https://github.com/christophM/rulefit.git"}
scikit-learn-intelex = "^2024.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
